--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/dataset_details.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/dataset_details.html.twig
@@ -1,10 +1,10 @@
 {% for dataset in datasets %}
-    {% if dataset.datasetSubmission.authors %}
+    {% if dataset.datasetSubmission and dataset.datasetSubmission.authors%}
         <div class="attr"><span class="attr">Dataset Author(s):</span> {{dataset.datasetSubmission.authors}}</div>
     {% endif %}
-    <div class="attr"><span class="attr">Primary Point of Contact:</span> {{dataset.dif.pointOfContactName.primaryPointOfContact.LastName}}, {{dataset.dif.pointOfContactName.primaryPointOfContact.FirstName}}</div>
-    {% if dataset.spoc_ris_id %}
-        <div class="attr"><span class="attr">Secondary Point of Contact:</span> {{dataset.dif.pointOfContactName.secondaryPointOfContact.LastName}}, {{dataset.dif.pointOfContactName.secondaryPointOfContact.FirstName}}</div>
+    <div class="attr"><span class="attr">Primary Point of Contact:</span> {{dataset.dif.primaryPointOfContact.LastName}}, {{dataset.dif.primaryPointOfContact.FirstName}}</div>
+    {% if dataset.dif.secondaryPointOfContact %}
+        <div class="attr"><span class="attr">Secondary Point of Contact:</span> {{dataset.dif.secondaryPointOfContact.LastName}}, {{dataset.dif.secondaryPointOfContact.FirstName}}</div>
     {% endif %}
     <div class="abstract">
         <div><span class="attr">Abstract:</span></div>
