--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -87,16 +87,12 @@
                 {% set metadata_title = "Metadata for this dataset is available, ISO compliant, and has been reviewed and accepted." %}
                 {% set metadata_icon = green_icon %}
             {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_NONE') %}
-                {% set metadata_na = metadata_na+1 %}
-                {% set metadata_title = "This dataset has not yet been registered." %}
-                {% set metadata_icon = na_icon %}
-            {% elseif dataset.metadataStatus == '0' %}
                 {% set metadata_red = metadata_red+1 %}
                 {% set registered_title = "This dataset has been registered, but no metadata has been submitted." %}
-                {% set metadata_icon = na_icon %}
+                {% set metadata_icon = red_icon %}
             {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_SUBMITTED') %}
                 {% set metadata_yellow = metadata_yellow+1 %}
-                {% set metadata_title = "Metadata for this dataset has been submitted." %}
+                {% set metadata_title = "Metadata for this dataset has been submitted for review." %}
                 {% set metadata_icon = yellow_icon %}
             {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_IN_REVIEW') %}
                 {% set metadata_yellow = metadata_yellow+1 %}
@@ -118,7 +114,7 @@
             {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_PUBLICLY_AVAILABLE') or dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_PUBLICLY_AVAILABLE_REMOTELY_HOSTED') %}
                 {% set available_green = available_green+1 %}
                 {% set available_title = "This dataset is available for all users to download." %}
-                {% set available_icon = na_icon %}
+                {% set available_icon = green_icon %}
             {% elseif dataset.availabilityStatus == '-1' %}
                 {% set available_na = available_na+1 %}
                 {% set available_title = "This dataset has not yet been registered, therefore it is not yet available." %}
@@ -126,30 +122,30 @@
             {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_NOT_AVAILABLE') %}
                 {% set available_red = available_red+1 %}
                 {% set available_title = "This dataset has been registered, but the data is not yet available." %}
-                {% set available_icon = na_icon %}
+                {% set available_icon = yellow_icon %}
             {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_PENDING_METADATA_APPROVAL') %}
                 {% set available_yellow = available_yellow+1 %}
                 {% set available_title = "This dataset does not yet have approved metadata, therefore is not available for download." %}
-                {% set available_icon = na_icon %}
+                {% set available_icon = yellow_icon %}
             {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_RESTRICTED_REMOTELY_HOSTED') %}
                 {% set available_yellow = available_yellow+1 %}
                 {% set available_title = "This dataset has been marked as restricted to author only, but is remotely hosted on a non-GRIIDC server, so availability status is not guaranteed to be accurate." %}
             {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_AVAILABLE_WITH_APPROVAL_REMOTELY_HOSTED') %}
                 {% set available_yellow = available_yellow+1 %}
                 {% set available_title = "This dataset has been marked as restricted to certain users, but is remotely hosted on a non-GRIIDC server, so availability status is not guaranteed to be accurate." %}
-                {% set available_icon = na_icon %}
+                {% set available_icon = red_icon %}
             {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_PUBLICLY_AVAILABLE_REMOTELY_HOSTED') %}
                 {% set available_yellow = available_yellow+1 %}
                 {% set available_title = "This dataset has been marked as available for all users to download, but is remotely hosted on a non-GRIIDC server, so availability status is not guaranteed to be accurate." %}
-                {% set available_icon = na_icon %}
+                {% set available_icon = green_icon %}
             {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_RESTRICTED') %}
                 {% set available_yellow = available_yellow+1 %}
                 {% set available_title = "This dataset is available, but download is restricted to author only." %}
-                {% set available_icon = na_icon %}
+                {% set available_icon = red_icon %}
             {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_AVAILABLE_WITH_APPROVAL') %}
                 {% set available_yellow = available_yellow+1 %}
                 {% set available_title = "This dataset is available, but download is restricted to certain users." %}
-                {% set available_icon = na_icon %}
+                {% set available_icon = red_icon %}
             {% endif %}
 
             <tr udi="{{dataset.udi}}">
